connect/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect
  namespace: default
  labels:
    app: connect
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: connect
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: connect
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Xms400m -Xmx400m -XX:+ExitOnOutOfMemoryError -Djava.security.egd=file:/dev/./urandom
            -Dspring.config.location=/connect/application.properties -Dspring.profiles.active=production
        image: ghcr.io/wisvch/connect:20230812-5560253@sha256:fba42bbb1fa230a2450445d976b51d773e8afac99123fa1cd52f29d56ea8324d
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: connect
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: 900Mi
          requests:
            cpu: 250m
            memory: 900Mi
        volumeMounts:
        - mountPath: /connect
          name: connect
          readOnly: true
        - mountPath: /tls
          name: tls
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: tls
        secret:
          defaultMode: 420
          secretName: ingress-tls
      - name: connect
        secret:
          defaultMode: 420
          secretName: connect
