connect/ingress-gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: connect-gke
  namespace: default
spec:
  externalName: connect.wisv.ch
  type: ExternalName
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: connect
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "connect.wisv.ch"
    nginx.ingress.kubernetes.io/proxy-ssl-name: "connect.wisv.ch"
spec:
  rules:
  - host: connect.ch.tudelft.nl
    http:
      paths:
      - backend:
          serviceName: connect-gke
          servicePort: 443
  tls:
  - hosts:
    - connect.ch.tudelft.nl
    secretName: ingress-ext-tls
